<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/topNews"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvBreakingNews">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/logoAndNewsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/logoImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circlelogo"
                    android:contentDescription="@string/logo_breaking_news"/>

                <TextView
                    android:id="@+id/newNews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/breaking_news_title"
                    android:textColor="@color/blue"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginTop="7dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/newsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/news_name"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/imageHeadline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <ImageView
                android:id="@+id/imageHeadline"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/rounded_corners"
                android:contentDescription="@string/top_news"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoAndNewsLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleHeadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_top_news"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/descHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/description_top_news"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBreakingNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topNews" />

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>